--- a/css/mian.css
+++ b/css/mian.css
@@ -1,3 +1,4 @@
+/* =====Hover cases===== */
 .item:hover {
   background-color: rgb(110, 241, 231) !important;
 }
@@ -5,6 +6,8 @@
 .images:hover {
   transform: rotate(8deg);
 }
+
+/*=====Responsive cases=====  */
 @media only screen and (max-width: 720px) {
   .logo {
     width: 407px;
