--- a/css/mian.css
+++ b/css/mian.css
@@ -1,11 +1,10 @@
 /* =====Hover cases===== */
 .item:hover {
   background-color: rgb(110, 241, 231) !important;
-  /* background-color: rgb(43, 134, 127) !important; */
 }
 
 .images:hover {
-  transform: rotate(8deg);
+  transform: scale(1.19);
 }
 
 /*=====Responsive cases=====  */
