--- a/css/mian.css
+++ b/css/mian.css
@@ -7,21 +7,27 @@
   transform: scale(1.19);
 }
 
+.box__select {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 /*=====Responsive cases=====  */
 @media only screen and (max-width: 720px) {
   .logo {
     width: 407px;
     height: 150px;
   }
-  }
+}
 
 @media only screen and (max-width: 490px) {
-.logo {
-  width: 203px;
-  height: 75px;
+  .logo {
+    width: 203px;
+    height: 75px;
+  }
 }
-}
-
 
 @media only screen and (max-width: 567px) {
   .list {
